--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/end_mill_launcher"
+        android:icon="@mipmap/end_mill_single"
         android:label="@string/app_title_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
